[package]
name = "hello_conceptho"
version = "0.1.0"
authors = ["Jordão <jordao.rosario01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.1"
env_logger = "0.6"